<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/select_personal_yt_feeds"
		android:enabled="false"
		android:key="personal_yt_feeds_group">
		<CheckBoxPreference
			android:title="@string/favorites"
			android:persistent="true"
			android:enabled="false"
			android:key="show_favorites"
			android:defaultValue="false"/>
		<CheckBoxPreference
			android:title="@string/subscriptions"
			android:persistent="true"
			android:enabled="false"
			android:key="show_newsubscriptionvideos"
			android:defaultValue="false"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/select_yt_feeds">
		<CheckBoxPreference
			android:title="@string/trending"
			android:persistent="true"
			android:enabled="true"
			android:key="show_on_the_web"
			android:defaultValue="true"/>
		<CheckBoxPreference
			android:title="@string/top_rated"
			android:persistent="true"
			android:enabled="true"
			android:key="show_top_rated"
			android:defaultValue="true"/>
		<CheckBoxPreference
			android:title="@string/most_popular"
			android:persistent="true"
			android:enabled="true"
			android:key="show_most_popular"
			android:defaultValue="true"/>
		<CheckBoxPreference
			android:title="@string/most_viewed"
			android:persistent="true"
			android:enabled="true"
			android:key="show_most_viewed"
			android:defaultValue="true"/>
	</PreferenceCategory>
</PreferenceScreen>