<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#FFFFFF"
	android:paddingLeft="5dp">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="#FFFFFF"
			android:paddingBottom="10dp">
			<ImageView
				android:src="@drawable/icon_small"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingTop="5dp"/>
			<TextView
				android:text="@string/info"
				android:layout_gravity="center_vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="10dp"
				android:textColor="#D00"
				android:textSize="30dp"/>
		</LinearLayout>
		<TextView
			android:text="@string/created_by"
			android:layout_gravity="center"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#000000"
			android:textSize="14dp"
			android:layout_marginRight="5dp"/>
		<TextView
			android:text="@string/follow_me"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:textColor="#D00"
			android:textSize="16dp"/>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_gravity="center"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<ImageButton
				android:id="@id/options_info_twitter"
				android:src="@drawable/follow_twitter"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="#FFF"
				android:layout_margin="10dp"
				android:onClick="click"/>
			<ImageButton
				android:id="@id/options_info_gplus"
				android:src="@drawable/follow_gplus"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="#FFF"
				android:layout_margin="10dp"
				android:onClick="click"/>
		</LinearLayout>
		<TextView
			android:text="@string/open_source"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:textColor="#D00"
			android:textSize="16dp"/>
		<Button
			android:id="@id/options_info_gcode"
			android:text="@string/visit_gcode"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginRight="5dp"
			android:onClick="click"/>
		<Button
			android:id="@id/options_info_homepage"
			android:text="www.greinr.com"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginRight="5dp"
			android:onClick="click"/>
	</LinearLayout>
</ScrollView>